# sg_stats

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: .gitignore  test.py
src/sg_stat/: __init__.py  multiproc.py  perturb.py  plot.py
tests/: test.py
