[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sg_stat"
dynamic = ["version"]
description = "Statistical Study of Non-Hermitian Spectral Graph"
authors = [
    {name = "Xianquan (Sarinstein) Yan", email = "xianquanyan@gmail.com"},
    {name = "Hakan Akgün", email = "hakanakgun317@gmail.com"},
]
maintainers  = [
    {name = "Xianquan (Sarinstein) Yan", email = "xianquanyan@gmail.com"},
]
keywords = [
    "non-hermitian spectral graph", "non-bloch band", "algebraic geometry", 
    "computer vision", "morphological image processing", "statistical study"
]
readme = {"file" = "README.md", "content-type" = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    # "Environment :: GPU :: NVIDIA CUDA"
]
dependencies = [
    "numpy",
    "numba",
    "networkx",
    "scikit-image",
    "scikit-learn",
]

[project.optional-dependencies]
require = ["tensorflow"]  # packages to install manually

[project.urls]
Homepage = "https://github.com/sarinstein-yan/sg_stats"
Repository = "https://github.com/sarinstein-yan/sg_stats"

[tool.hatch.version]
path = "src/sg_stat/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = ["assets"]

[tool.hatch.build.targets.wheel]
packages = ["src/sg_stat"]